tests/escript/scripts/escript_invalid_duplicate_argument.py.out
Error in script: At line 2, SyntaxError: duplicate argument 'a' in function definition