tests/escript/scripts/escript_invalid_duplicate_argument.py
# python3;failure
def func(a, a):
    pass